# py-squirrel

./: .gitignore  LICENSE  README.md  pyproject.toml  pysquirrel.py
sample/: pocketdb_backup_1548549107.sql
